<resources>
	<string name="app_name">MyContacts</string>
	<string name="add_contact">Add Contact</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="email">Email Address</string>
	<string name="phone">Phone Number</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="glsid">GLSID</string>
	<string name="iibdcc">II-BDCC</string>
	<string name="select_photo">Select Photo</string>
	<string name="cancel">Cancel</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="photo">Photo</string>
	<string name="delete">Delete</string>
	<string name="update">Update</string>
	<string name="edit">Edit</string>
	<string name="edit_contact">Edit Contact</string>
	<string name="update_contact">Update</string>
	<string name="tag">Tag</string>
	<string name="sexe">Sexe :</string>
</resources>