<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".View.UpdateContactActivity">

	<LinearLayout

		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:padding="16dp"
		tools:layout_editor_absoluteX="104dp"
		tools:layout_editor_absoluteY="-37dp">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:text="@string/add_contact"
			android:textAlignment="center"
			android:textSize="24sp"
			android:textStyle="bold" />
		<ImageView
			android:id="@+id/photoImageView"
			android:layout_width="150dp"
			android:layout_height="150dp"
			android:layout_margin="10dp"
			android:layout_gravity="center"
			android:contentDescription="@string/select_photo"
			android:src="@mipmap/ic_avatar" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/firstNameInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/first_name"
			app:layout_constraintTop_toTopOf="parent">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/firstNameEditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPersonName" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/lastNameInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/last_name"
			app:layout_constraintTop_toBottomOf="@+id/firstNameInputLayout">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/lastNameEditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPersonName" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/emailInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/email"
			app:layout_constraintTop_toBottomOf="@+id/lastNameInputLayout">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/emailEditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/phoneInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/phone"
			app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/phoneEditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="phone" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/tagInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/tag"
			app:layout_constraintTop_toBottomOf="@+id/tagInputLayout">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/tagEditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text" />
		</com.google.android.material.textfield.TextInputLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"

			android:gravity="center_vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:text="@string/sexe"
				android:textStyle="bold" />

			<RadioGroup
				android:id="@+id/genderRadioGroup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="32dp"
				android:orientation="horizontal">

				<RadioButton
					android:id="@+id/maleRadioButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="16dp"
					android:text="@string/male" />

				<RadioButton
					android:id="@+id/femaleRadioButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/female" />
			</RadioGroup>


		</LinearLayout>



		<com.google.android.material.button.MaterialButton
			android:id="@+id/updateButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:text="@string/update_contact" />
		<com.google.android.material.button.MaterialButton
			style="?attr/materialButtonOutlinedStyle"
			android:id="@+id/cancelButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/cancel" />


	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>